2008-10-08    <neal@bcn.boulder.co.us>

	* audittools/templates/base.html: 
	only show /validator/ if in debug mode
	
2008-10-08    <neal@bcn.boulder.co.us>

	Version 0.7.0
	Change from GPLv3 to MIT license for wider uptake, less complication

	* makeauditunits.py (parse_csv): 
	Finish & refactor code to combine ballots for privacy for csv
	remove models.AuditUnit: util.AuditUnit does what we really want
	finally remove models.Batch.cumulative - we combine when we read in
	* electionaudit/urls.py: 
	fix how settings are imported to use generic method so validator works
	 with ./manage.py runserver_plus --settings settings_debug
	* electionaudit/templates/electionaudit/reports.html: 
	fix some bad html
	
2008-10-08    <neal@bcn.boulder.co.us>

	* electionaudit/templates/electionaudit/index.html: 
	Add introduction to home page
	
2008-10-07    <neal@bcn.boulder.co.us>

	* electionaudit/util.py (Pipe.push): 
	Write util module with AuditUnit class to combine them for privacy
	Add pushAuditUnit and class Push, ready to refactor makeauditunits
	
2008-10-06    <neal@bcn.boulder.co.us>

	* audittools/templates/404.html: 
	add 404.html and 500.html
	Describe csv in README
	Better titles in templates
	
2008-10-05    <neal@bcn.boulder.co.us>

	* electionaudit/urls.py: 
	fix settings import in urls.py

	* makeauditunits.py (parse_csv): 
	name csv election after filename

	* electionaudit/templates/electionaudit/reports.html: 
	add headers and audit unit counts to contest list
	
2008-10-05    <neal@bcn.boulder.co.us>

	* Version 0.6.0
	* electionaudit/models.py (Choice): 
	(Contest.tally): 
	add tally funtion to calculate margins
	add contest field to Choice model
	speed up via a single transaction for parsing each file:
	 from 2:53 to 0:44 for testp.xml
	
	* makeauditunits.py (parse_csv): 
	new function to parse csv files like that from San Mateo county
	
2008-10-04    <neal@bcn.boulder.co.us>

	* electionaudit/templates/electionaudit/index.html: 